<resources>
    <string name="app_name">YiIM_V4</string>
    <string name="str_login">登录</string>
    <string name="str_hint_login">请输入账号</string>
    <string name="str_hint_passwd">请输入密码</string>
    <string name="str_remember_pwd">记住密码</string>
    <string name="str_auto_login">自动登录</string>
    <string name="str_forget_passwd">忘记密码?</string>
    <string name="str_exit">退出</string>
    <string name="str_logout">注销登录</string>
    <string name="str_connecting_server">正在连接服务器&#8230;</string>
    <string name="err_connecting_server_failed">连接服务器失败!</string>
    <string name="err_register_too_quikly">注册太频繁，过一会再来吧</string>
    <string name="err_register_failed">注册失败!</string>
    <string name="err_register_success">注册成功</string>
    <string name="str_register">注册</string>
    <string name="str_registering">正在注册&#8230;</string>
    <string name="str_input_necessary">必填</string>
    <string name="str_register_username">用户名：</string>
    <string name="str_register_username_hint">请输入用户名</string>
    <string name="str_register_nickname">昵称：</string>
    <string name="str_register_nickname_hint">请输入昵称</string>
    <string name="str_register_password">密码：</string>
    <string name="str_register_password_hint">请输入密码</string>
    <string name="str_register_confirm">确认密码：</string>
    <string name="str_register_confirm_hint">请输入确认密码</string>
    <string name="str_register_gender">性别：</string>
    <string name="str_register_birthday">出生年月：</string>
    <string name="str_register_birthday_hint">请选择出生年月</string>
    <string name="str_register_email">邮箱：</string>
    <string name="str_register_email_hint">name@sample.com</string>
    <string name="str_register_country">国家：</string>
    <string name="str_register_country_hint">请输入国家</string>
    <string name="str_register_province">地区(省)：</string>
    <string name="str_register_province_hint">请输入地区</string>
    <string name="str_input_unnecessary">选填</string>
    <string name="str_tijiao">提交</string>
    <string name="err_empty_nick_name">昵称不能为空!</string>
    <string name="err_empty_user_name">用户名不能为空!</string>
    <string name="err_empty_passwd">密码不能为空!</string>
    <string name="err_empty_confirm_passwd">确认密码不能为空!</string>
    <string name="err_noteq_passwd">两次输入密码不一致!</string>
    <string name="str_loading">正在加载&#8230;</string>
    <string name="str_logining">正在登录&#8230;</string>
    <string name="err_illegal_username">用户名非法，至少五位的小写字母或数字!</string>
    <string name="err_illegal_passwd">密码非法，至少五位的小写字母或数字!</string>
    <string name="err_illegal_email">邮箱非法，请输入有效邮箱!</string>
    <string name="err_login_failed">登录失败!</string>
    <string name="str_conversation">消息</string>
    <string name="str_room">群组</string>
    <string name="str_friend">好友</string>
    <string name="str_nearby">附近</string>
    <string name="str_mine">我</string>
    <string name="str_my_friend">我的好友</string>
    <string name="str_my_room">我的群</string>
    <string name="str_not_certified">未认证</string>
    <string name="str_online">在线</string>
    <string name="str_unavailable">离线</string>
    <string name="str_joined">已出席</string>
    <string name="str_unjoined">未出席</string>
    <string name="str_delete">删除</string>
    <string name="str_destroy">销毁</string>
    <string name="str_cancel_privacy">取消屏蔽</string>
    <string name="str_personal_info">个人信息</string>
    <string name="str_privacy_list">隐私列表</string>
    <string name="str_privacy_list_tip">被屏蔽的好友及群</string>
    <string name="str_settings">设置</string>
    <string name="str_about">关于</string>
    <string name="str_not_support">很抱歉，您的设备暂时不支持此功能</string>
    <string name="str_loading_nodata_tip">暂无数据哦</string>
    <string name="str_cancel">取消</string>
    <string name="str_search_friend">查找好友</string>
    <string name="str_search_room">查找群</string>
    <string name="str_create_room">创建群</string>
    <string name="str_group_manager">分组管理</string>
    <string name="str_emoji">大表情</string>
    <string name="str_emoji_classical">经典</string>
    <string name="str_image">图片</string>
    <string name="str_take_photo">拍照</string>
    <string name="str_send">发送</string>
    <string name="str_voice_press">按住 说话</string>
    <string name="str_voice_up">松开 结束</string>
    <string name="chatfooter_too_short">录音时间太短</string>
    <string name="chatfooter_cancel_rcd">手指上滑，取消传送</string>
    <string name="chatfooter_cancel_rcd_release">松开手指，取消传送</string>
    <string name="str_unsubscription">已将您删除</string>
    <string name="str_subscribed">已同意您的好友请求</string>
    <string name="str_room_subscribed">已同意您的群申请</string>
    <string name="str_room_unsubscription">已拒绝您的群申请</string>
    <string name="str_msg_type_audio">[语音短消息]</string>
    <string name="str_msg_type_big_emoji">[大表情]</string>
    <string name="str_msg_type_image">[图片]</string>
    <string name="str_exit_confirm">退出后，你将收不到新的消息.确定要退出？</string>
    <string name="str_settings_msg_tip">消息提醒设置</string>
    <string name="str_settings_msg_receipt">消息回执设置</string>
    <string name="str_settings_auto_join">自动出席群</string>
    <string name="str_settings_clear_msg">清空所有聊天记录</string>
    <string name="str_settings_clear_conversation">清空所有消息记录</string>
    <string name="str_settings_clear_image">清理所有图片缓存</string>
    <string name="str_settings_clear_userinfo">清理所有用户资料缓存</string>
    <string name="str_msg_receipt">消息回执</string>
    <string name="str_msg_receipt_tip">发送或接收消息时，可附加消息回执</string>
    <string name="str_msg_receipt_request">请求消息回执</string>
    <string name="str_msg_receipt_request_tip">当向对方发送消息时，是否请求消息回执</string>
    <string name="str_msg_receipt_response">响应消息回执</string>
    <string name="str_msg_receipt_response_tip">当对方向自己请求消息回执时，是否响应</string>
    <string name="str_msg_receipt_setting_tip">注：开启消息回执，会给双方都带来额外的流量开销。群不支持消息回执</string>
    <string name="str_msg_tip">消息提醒</string>
    <string name="str_msg_tip_keyguard">锁屏提醒</string>
    <string name="str_msg_tip_roster">好友</string>
    <string name="str_msg_tip_audio_tip">声音提醒</string>
    <string name="str_msg_tip_vibrator_tip">震动提醒</string>
    <string name="str_msg_tip_room">群</string>
    <string name="str_msg_tip_sound">消息提示音类型</string>
    <string name="str_msg_tip_sound_office">叮咚</string>
    <string name="str_msg_tip_sound_chrod">和弦</string>
    <string name="str_msg_tip_sound_tritone">三全音</string>
    <string name="str_clear_msg_confirm">确认清空所有聊天记录？</string>
    <string name="str_clear_msg_conversation_confirm">确认清空所有消息记录？</string>
    <string name="str_clear_msg_imagecache_confirm">确认清空所有图片缓存？</string>
    <string name="str_clear_msg_userinfo_confirm">确认清空所有用户资料缓存？</string>
    <string name="str_nickname_hint">请输入新的昵称</string>
    <string name="str_nickname_tip">好的名字可以让你的朋友更容易记住你</string>
    <string name="str_input_avatar">头像：</string>
    <string name="str_input_nick">昵称：</string>
    <string name="str_input_account">账号：</string>
    <string name="str_account_format">账号：%1$s</string>
    <string name="str_input_gender">性别：</string>
    <string name="str_input_district">地区：</string>
    <string name="str_input_sign">个性签名：</string>
    <string name="str_input_room_sign">群签名：</string>
    <string name="str_input_room_welcome">欢迎词：</string>
    <string name="str_input_memo">备注：</string>
    <string name="str_male">男</string>
    <string name="str_female">女</string>
    <string name="str_required">必填</string>
    <string name="str_optional">选填</string>
    <string name="str_yes">是</string>
    <string name="str_no">否</string>
    <string name="str_entry_add_request">想添加您为好友</string>
    <string name="str_room_add_request">邀请您加入[%1$s]群</string>
    <string name="str_room_register_request">申请加入[%1$s]群</string>
    <string name="str_entry_add_accept">已同意您的好友请求</string>
    <string name="str_entry_delete">已将您删除</string>
    <string name="str_agree_add_friend">同意添加好友</string>
    <string name="str_agree_add_room">同意邀请</string>
    <string name="str_agree_register_room">同意申请</string>
    <string name="err_join_room_room_not_exist">群不存在，无法加入</string>
    <string name="str_find">查找</string>
    <string name="str_find_friend_hint">账号精确查找</string>
    <string name="err_search_empty">查找内容不能为空!</string>
    <string name="str_group_name_hint">请输入分组名称</string>
    <string name="err_empty_group_name">分组名称不能为空</string>
    <string name="err_del_group_failed">删除分组失败</string>
    <string name="err_rename_group_failed">重命名分组失败</string>
    <string name="err_rename_group_default">默认分组不可重命名！</string>
    <string name="err_del_group_default">默认分组不可删除！</string>
    <string name="str_del_group_tip">分组内好友将移动至默认分组，您确定要删除分组?</string>
    <string name="str_del_room_group_tip">分组内群将移动至默认分组，您确定要删除分组?</string>
    <string name="err_modify_group_failed">变更分组失败，请检查网络是否连接正常</string>
    <string name="err_multi_group_name">分组已经存在</string>
    <string name="str_add_group">添加分组</string>
    <string name="str_modify_group">移动至分组</string>
    <string name="str_rename_group">重命名分组</string>
    <string name="str_modify_group_title">分组变更</string>
    <string name="str_finish">完成</string>
    <string name="str_agree">同意</string>
    <string name="str_deagree">拒绝</string>
    <string name="str_add">添加</string>
    <string name="str_userinfo">账号信息</string>
    <string name="str_roominfo">群信息</string>
    <string name="str_block_msg">屏蔽消息</string>
    <string name="str_auto_join_room">自动出席</string>
    <string name="str_view_msg_record">查看聊天记录</string>
    <string name="str_msg_record">聊天记录</string>
    <string name="str_add_as_friend">加为好友</string>
    <string name="str_set_memo">修改备注</string>
    <string name="str_re_subscript">重新认证</string>
    <string name="str_re_send">重新发送?</string>
    <string name="str_delete_friend">删除好友</string>
    <string name="str_delete_friend_tip">您确定要删除[%1$s]吗？</string>
    <string name="str_delete_room_tip">您确定要删除[%1$s]群吗？</string>
    <string name="str_destroy_room_tip">您确定要销毁[%1$s]群吗？</string>
    <string name="str_set_memo_tip">备注可以让你更容易记住你的朋友</string>
    <string name="str_save">保存</string>
    <string name="err_save">保存失败</string>
    <string name="str_invite_friend">邀请好友</string>
    <string name="str_view_room_member">查看成员</string>
    <string name="str_room_member_title">群组成员</string>
    <string name="str_destroy_room">销毁群</string>
    <string name="str_into_room">申请加入群</string>
    <string name="str_join_room">出席群</string>
    <string name="str_unjoin_room">取消出席</string>
    <string name="str_exit_room">退出群</string>
    <string name="str_modify_roominfo">修改群信息</string>
    <string name="err_unjoin_send_msg_tip">未出席该群，请先出席</string>
    <string name="err_room_not_exist">群不存在</string>
    <string name="str_received">[已接收]</string>
    <string name="str_clear_chat_record_confirm">您确定要清除聊天记录吗?</string>
    <string name="input_lab_room_name">群名称：</string>
    <string name="input_lab_room_sign">群签名：</string>
    <string name="input_lab_room_welcome">欢迎词：</string>
    <string name="str_hint_room_name">请输入群名称</string>
    <string name="err_empty_room_name">群名称不能为空!</string>
    <string name="str_hint_room_sign">请输入群个性签名</string>
    <string name="str_hint_room_welcome">请输入群欢迎词</string>
    <string name="err_empty_room_sign">群个性签名不能为空!</string>
    <string name="str_create">创建</string>
    <string name="err_create_room_already_exist">群已存在，创建失败</string>
    <string name="err_create_room_failed">创建群失败</string>
    <string name="err_empty_room_welcome">欢迎词不能为空</string>
    <string name="err_config_room_failed">配置群失败</string>
    <string name="str_room_creating">正在创建群&#8230;</string>
    <string name="str_room_create_success">群创建成功</string>
    <string name="str_choise_photo">选择本地图片</string>
    <string name="str_relogin_tip">账号在其它终端登录，请确定是否为正常操作。</string>
    <string name="str_relogin">重新登录</string>
    <string name="str_unread_msg_tip">您有[%1$d]条未读消息</string>
    <string name="str_modify_region_country">国家：</string>
    <string name="str_modify_region_province">地区(省)：</string>
    <string name="str_modify_region_country_hint">请输入国家</string>
    <string name="str_modify_region_province_hint">请输入地区</string>
</resources>