<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/main_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_tab_conversation"
            style="@style/main_tab"
            android:drawableTop="@drawable/btn_tab_chat_selector"
            android:text="@string/str_conversation" />

        <RadioButton
            android:id="@+id/main_tab_friend"
            style="@style/main_tab"
            android:drawableTop="@drawable/btn_tab_contact_selector"
            android:text="@string/str_friend" />

        <RadioButton
            android:id="@+id/main_tab_room"
            style="@style/main_tab"
            android:drawableTop="@drawable/btn_tab_room_selector"
            android:text="@string/str_room" />

        <RadioButton
            android:id="@+id/main_tab_nearby"
            style="@style/main_tab"
            android:drawableTop="@drawable/btn_tab_nearby_selector"
            android:text="@string/str_nearby" />

        <RadioButton
            android:id="@+id/main_tab_mine"
            style="@style/main_tab"
            android:drawableTop="@drawable/btn_tab_mine_selector"
            android:text="@string/str_mine" />
    </RadioGroup>

</LinearLayout>