<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dip"
            android:background="@color/cell_header_bg"
            android:gravity="center_vertical"
            android:paddingLeft="15dip"
            android:text="@string/str_input_necessary"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_username"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_username"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_username_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_nickname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_nickname"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_nickname_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_password"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_password_hint"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_confirm"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_confirm"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_confirm_hint"
                android:inputType="textPassword"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.chyitech.yiim.common.CheckSwitchButton
                android:id="@+id/regiser_gender_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="6dip"
                android:checked="false" />

            <TextView
                android:id="@+id/register_gender_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_female"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dip"
            android:background="@color/cell_header_bg"
            android:gravity="center_vertical"
            android:paddingLeft="15dip"
            android:text="@string/str_input_unnecessary"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="72dip"
            android:background="@drawable/contact_list_bg_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onAvatarClick"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/str_input_avatar"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.ikantech.support.widget.YiRoundImageView
                android:id="@+id/register_avatar"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginRight="9dip"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/mini_avatar_shadow" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:contentDescription="@null"
                android:src="@drawable/group_fold_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_birthday"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_birthday"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/str_register_birthday_hint"
                android:inputType="date"
                android:onClick="onBirthdayClick" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_email"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_email_hint"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_country"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_country"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_country_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:background="@drawable/contact_list_bg_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="center_vertical"
                android:text="@string/str_register_province"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_province"
                style="@style/register_editbox"
                android:ellipsize="end"
                android:hint="@string/str_register_province_hint" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>