<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:background="@drawable/contact_list_bg_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/str_modify_region_country"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/country"
            style="@style/register_editbox"
            android:ellipsize="end"
            android:hint="@string/str_modify_region_country_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:background="@drawable/contact_list_bg_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="90dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/str_modify_region_province"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/province"
            style="@style/register_editbox"
            android:ellipsize="end"
            android:hint="@string/str_modify_region_province_hint" />
    </LinearLayout>

</LinearLayout>