<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:background="@drawable/contact_list_bg_selector" >

        <TextView
            android:id="@+id/msg_receipt_all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/str_msg_receipt"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/msg_receipt_all"
            android:layout_marginLeft="15dip"
            android:ellipsize="end"
            android:text="@string/str_msg_receipt_tip"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.chyitech.yiim.common.CheckSwitchButton
            android:id="@+id/msg_receipt_switch_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="6dip"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="24dip"
        android:background="@color/cell_header_bg" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:background="@drawable/contact_list_bg_selector" >

        <TextView
            android:id="@+id/msg_receipt_request"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/str_msg_receipt_request"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/msg_receipt_request"
            android:layout_marginLeft="15dip"
            android:ellipsize="end"
            android:text="@string/str_msg_receipt_request_tip"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.chyitech.yiim.common.CheckSwitchButton
            android:id="@+id/msg_receipt_switch_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="6dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:background="@drawable/contact_list_bg_selector" >

        <TextView
            android:id="@+id/msg_receipt_response"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="center_vertical"
            android:text="@string/str_msg_receipt_response"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/msg_receipt_response"
            android:layout_marginLeft="15dip"
            android:ellipsize="end"
            android:text="@string/str_msg_receipt_response_tip"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.chyitech.yiim.common.CheckSwitchButton
            android:id="@+id/msg_receipt_switch_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="6dip" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="6dip"
        android:text="@string/str_msg_receipt_setting_tip"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>